--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,19 @@ url: ""
 
 encoding: UTF-8
 
+show_dir_listing: false
+
 collections:
   slides:
     output: true
     permalink: /:collection/:name
+
+webrick:
+  headers:
+    X-Frame-Options: DENY
+    X-XSS-Protection: 1; mode=block
+    Referrer-Policy: no-referrer, strict-origin-when-cross-origin
+    Strict-Transport-Security: max-age=63072000
 
 kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
@@ -24,7 +33,7 @@ kramdown:
 
 # Set the Sass partials directory, as we're using @imports
 sass:
-  style: compressed # You might prefer to minify using :compressed
+  style: compressed
 
 exclude:
   - .sass-cache/
