--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -34,14 +34,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       # - name: Setup Ruby
-      #   uses: ruby/setup-ruby@8575951200e472d5f2d95c625da0c7bec8217c42 # v1.161.0
-      #   with:
-      #     ruby-version: '3.1' # Not needed with a .ruby-version file
-      #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      #     cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v5
+      #   uses: ruby/setup-ruby
+      # #   with:
+      # #     ruby-version: '3.1' # Not needed with a .ruby-version file
+      # #     bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      # #     cache-version: 0 # Increment this number if you need to re-download cached gems
+      # - name: Setup Pages
+      #   id: pages
+      #   uses: actions/configure-pages@v5
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
