--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:
 description: >- # this means to ignore newlines until "baseurl:"
   This is an awesome slide build on reveal.js and jekyll
 baseurl: "" # the subpath of your site, e.g. /blog or /slides or /whatever
-url: "" # the base hostname & protocol for your site, e.g. https://sains.com.my
+url: "https://lerryws.xyz/sains-revealjs/" # the base hostname & protocol for your site, e.g. https://sains.com.my
 
 encoding: UTF-8
 
